--- a/assets/css/color.css
+++ b/assets/css/color.css
@@ -15,6 +15,7 @@
     --dark_grey: #2e3131;
     --dark_green: #20bf6b;
     --dark_orange: #fa8231;
+    --grey: #c6c6c6;
 
     --prim0: #2F3345;
     --prim1: #595D72;
