--- a/assets/css/management.css
+++ b/assets/css/management.css
@@ -1,9 +1,9 @@
 #management
 {
-    width: 75%;
+    width: 100%;
     height: 100vh;
     float: right;
-    transition: width .5s ease;
+    transition: width .5s ease-in-out;
 }
 
 #search_bar
@@ -12,7 +12,6 @@
     border: 2px solid var(--prim3);
     margin: 2rem 0 0 10%;
 }
-
 
 #search_bar input,
 #search_bar select
@@ -96,14 +95,20 @@
     color: var(--grey);
 }
 
+#table_results thead tr
+{
+    background-color: var(--prim2);
+}
+
 #table_results td, th
 {
     width: 10%;
     border: 1px solid var(--prim0);
     padding: 0.25rem;
+    height: 3rem;
 }
 
-#table_results tr:hover
+#table_results tbody tr:hover
 {
     background-color: var(--prim2);
 }
