--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -2,9 +2,10 @@
 {
     position: relative;
     float: right;
-    width: 75%;
+    width: 100%;
     height: 100vh;
     margin-top: 5%;
+    transition: width .5s ease-in-out;
 }
 
 #navigation div
