Added Login function
Added basic login-funtion (working, but no safe data transmission and no safe password query)

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -31,7 +31,7 @@
 #sidebar h1
 {
     text-align: center;
-    color: var(--white);
+    color: var(--light_grey);
     padding: 2rem 0 2rem 0;
     border-bottom: 1px solid var(--prim0);
 }
