--- a/assets/css/management_user.css
+++ b/assets/css/management_user.css
@@ -53,7 +53,8 @@
 
 #edit {color: var(--light_grey);}
 
-#edit input
+#edit input,
+#edit select
 {
     border: 2px solid var(--prim2);
     background: none;
@@ -63,7 +64,11 @@
     padding: 0 4% 0 4%;
     font-size: 1rem;
     color: var(--light_grey);
+    -webkit-box-sizing: border-box;
 }
+
+#edit select {-webkit-appearance: none;}
+#edit select option {color: var(--dark_grey);}
 
 #edit input:focus
 {
